# TFG

./: .gitignore  pyproject.toml
docs/: EDA_summary.md
src/: paths.py
src/models/: siamese.py
src/music_tfg/: paths.py
src/scripts/: 04_train_siamese.py  05_faiss_indexing.py  06_evaluation.py
src/scripts/eda/: 01_eda_tracks.py  02_eda_artists.py  03_preprocessing.py  prueba.py
