[project]
name = "music-tfg"
version = "0.1.0"
description = "Sistema de análisis de influencias musicales con IA"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/music_tfg"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]